Refactor AuthorizationService extracting the API call into a Client service